# BIGSdb_downloader

./: README.md  bigsdb_downloader.py  pyproject.toml
src/bigsdb_downloader/: main.py
